# EternalTerminal

./: .codespellrc  .gitignore  .gitmodules  .travis.yml  2026-03-28-pr.md  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CNAME  NIXOS-readme.md  README.md  _config.yml  about.md  build_static.sh  codecov.yml  coverage.sh  default.nix  download.md  et.rb  flake.nix  format.sh  howitworks.md  import_submodules.sh  index.html  make_changelog.sh  make_rpm_changelog.sh  params.json  renovate.json  usermanual.md  vcpkg.json  whoweare.md
external_imported/PlatformFolders/: .astylerc  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  appveyor.yml  doxygen.conf  platform_folders.cpp
external_imported/UniversalStacktrace/: .gitignore  .gitmodules  CMakeLists.txt  README.md
external_imported/sentry-native/: .clang-format  .codechecker-ignore  .codecov.yml  .craft.yml  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  sentry-config.cmake.in  sentry.rc.in
external_imported/simpleini/: .travis.yml  CMakeLists.txt  Makefile  README.md  SimpleIni.h  SimpleIniConfig.cmake.in  release.txt
sandbox/: CMakeLists.txt  FlakyTerminal.cpp  Terminal.cpp  TerminalClient.cpp  TerminalServer.cpp  TestBacked.cpp  TestConnection.cpp  TestFakeSocketHandler.cpp  TestFlakyConnection.cpp  TestNCurses.cpp  TestTransfer.cpp
src/: BackedReader.cpp  BackedReader.hpp  BackedWriter.cpp  BackedWriter.hpp  CApi.h  CMakeLists.txt  ClientConnection.cpp  ClientConnection.hpp  Connection.cpp  Connection.hpp  CryptoHandler.cpp  CryptoHandler.hpp  EternalTCP.cpp  EternalTCP.h  FakeSocketHandler.cpp  FakeSocketHandler.hpp  FlakyFakeSocketHandler.cpp  FlakyFakeSocketHandler.hpp  Globals.hpp  Headers.cpp  Headers.hpp  ProcessHelper.cpp  ProcessHelper.hpp  ServerClientConnection.cpp  ServerClientConnection.hpp  ServerConnection.cpp  ServerConnection.hpp  SocketHandler.cpp  SocketHandler.hpp  UnixSocketHandler.cpp  UnixSocketHandler.hpp  easylogging++.cc
src/base/: BackedReader.cpp  BackedReader.hpp  BackedWriter.cpp  BackedWriter.hpp  ClientConnection.cpp  ClientConnection.hpp  Connection.cpp  Connection.hpp  CryptoHandler.cpp  CryptoHandler.hpp  DaemonCreator.cpp  DaemonCreator.hpp  EtHttpLib.hpp  FakeSocketHandler.cpp  FakeSocketHandler.hpp  FlakySocketHandler.hpp  Globals.hpp  Headers.hpp  JsonLib.hpp  LogHandler.cpp  LogHandler.hpp  MessageReader.hpp  MessageWriter.hpp  Packet.hpp  PipeSocketHandler.cpp  PipeSocketHandler.hpp  RawSocketUtils.cpp  RawSocketUtils.hpp  ServerClientConnection.cpp  ServerClientConnection.hpp  ServerConnection.cpp  ServerConnection.hpp  SocketEndpoint.hpp  SocketHandler.cpp  SocketHandler.hpp  SubprocessToString.cpp  SubprocessToString.hpp  SubprocessUtils.cpp  SubprocessUtils.hpp  SystemUtils.cpp  (+13 more)
src/htm/: HtmClient.cpp  HtmClient.hpp  HtmClientMain.cpp  HtmHeaderCodes.hpp  HtmServer.cpp  HtmServer.hpp  HtmServerMain.cpp  IpcPairClient.cpp  IpcPairClient.hpp  IpcPairEndpoint.cpp  IpcPairEndpoint.hpp  IpcPairServer.cpp  IpcPairServer.hpp  MultiplexerState.cpp  MultiplexerState.hpp  TerminalHandler.cpp  TerminalHandler.hpp
src/terminal/: Console.hpp  DaemonCreator.cpp  HostParsing.hpp  ParseConfigFile.hpp  PortForwardDestinationHandler.hpp  PortForwardHandler.cpp  PortForwardHandler.hpp  PortForwardSourceHandler.cpp  PortForwardSourceHandler.hpp  ProcessHelper.hpp  PseudoTerminalConsole.hpp  PseudoUserTerminal.hpp  PsuedoTerminalConsole.hpp  PsuedoUserTerminal.hpp  RawSocketUtils.cpp  RawSocketUtils.hpp  ServerFifoPath.cpp  ServerFifoPath.hpp  SshSetupHandler.cpp  SshSetupHandler.hpp  TelemetryService.cpp  TelemetryService.hpp  Terminal.cpp  Terminal.hpp  TerminalClient.cpp  TerminalClient.hpp  TerminalClientMain.cpp  TerminalMain.cpp  TerminalServer.cpp  TerminalServer.hpp  TerminalServerMain.cpp  UserJumphostHandler.cpp  UserJumphostHandler.hpp  UserTerminal.hpp  UserTerminalHandler.cpp  UserTerminalHandler.hpp  UserTerminalRouter.cpp  UserTerminalRouter.hpp
terminal/: CMakeLists.txt  ConsoleUtils.cpp  ConsoleUtils.hpp  FlakyTerminal.cpp  GoogleLogFatalHandler.cpp  GoogleLogFatalHandler.hpp  IdPasskeyHandler.cpp  IdPasskeyHandler.hpp  LogHandler.cpp  LogHandler.hpp  NCursesOverlay.cpp  NCursesOverlay.hpp  PamHandler.cpp  PamHandler.hpp  ParseConfigFile.hpp  PortForwardClientListener.cpp  PortForwardClientListener.hpp  PortForwardClientRouter.cpp  PortForwardClientRouter.hpp  PortForwardDestinationHandler.cpp  PortForwardDestinationHandler.hpp  PortForwardHandler.cpp  PortForwardHandler.hpp  PortForwardServerHandler.cpp  PortForwardServerHandler.hpp  PortForwardSourceHandler.cpp  PortForwardSourceHandler.hpp  PortForwardSourceListener.cpp  PortForwardSourceListener.hpp  PortForwardSourceRouter.cpp  PortForwardSourceRouter.hpp  ProcessHelper.cpp  ProcessHelper.hpp  RawSocketUtils.cpp  RawSocketUtils.hpp  SocketUtils.cpp  SocketUtils.hpp  SshSetupHandler.cpp  SshSetupHandler.hpp  StdIoBuffer.hpp  (+11 more)
test/: BackedTest.cpp  CMakeLists.txt  ConnectionTest.cpp  CryptoHandlerTest.cpp  FakeConsole.hpp  FakeConsoleTest.cpp  FakeUserTerminal.hpp  FlakySocketHandler.hpp  FuzzableTerminalServer.hpp  HostParsingTest.cpp  JumphostTest.cpp  Main.cpp  Makefile  ServerFifoPathTest.cpp  TerminalTest.cpp  TerminalTst.cpp  TestBacked.cpp  TestCryptoHandler.cpp  TestFakeSocketHandler.cpp  TestHeaders.hpp  TestMain.cpp  TestTransfer.cpp  test_template.cpp  test_tsan.suppression
test/e2e/: README.md  REPORT.md  do_scenario.sh  generate_report.py  print_timestamps.py  run_all_scenarios.sh  run_e2e_test.sh  throttle_proxy.py  throughput_test.sh
test/integration_tests/: BackedTest.cpp  ConnectionTest.cpp  FakeSshSetupHandler.hpp  JumphostTest.cpp  PortForwardHandlerTest.cpp  TerminalServerFuzzer.cpp  TerminalServerRouterFuzzer.cpp  TerminalServerTest.cpp  TerminalTest.cpp
test/system_tests/: backwards_compatibility.sh  connect_with_jumphost.sh
test/unit_tests/: BackedIOTest.cpp  ClientConnectionTest.cpp  FakeConsoleTest.cpp  ForwardDestinationHandlerTest.cpp  ForwardSourceHandlerTest.cpp  PortForwardHandlerTest.cpp  (+10 more)
(+844 files in other folders)
